# perseus_tufts_scraper

./: .gitignore  .pdm-python  books.jsonl  cards.jsonl  lexical_forms.jsonl  pyproject.toml  scrapy.cfg
perseus_tufts_scraper/: items.py  middlewares.py  pipelines.py  settings.py
perseus_tufts_scraper/spiders/: text_details.py  text_structure.py
